# whatsapp-backup-manager

./: .gitignore  config.example.json  config.json  key  prd.json  progress.txt  pyproject.toml  wa_tool.py
docs/: MANUAL.md  report.md  walkthrough.md  walkthrough_OLD.md
tests/: test_adb.py  test_cmd_convert.py  test_cmd_decrypt.py  test_cmd_orchestrator.py  test_cmd_pull.py  test_cmd_push.py  test_config_env.py
wa_crypt_tools/: CLAUDE.md  __main__.py  adb.py  config.py  env_utils.py  utils.py
wa_crypt_tools/commands/: __init__.py  convert.py  decrypt.py  orchestrator.py  pull.py  push.py
